--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Local Css -->
@@ -15,7 +15,47 @@
     <title>Ten Scecond Math Game</title>
 </head>
 <body>
-    <h1 class="text-center">Ten Second Math Game</h1>
+    <h1 class="text-center"><span class="pink-text-shadow">Ten Second</span> <span class="blue-text-shadow"> Math Game</span></h1>
+    <!-- Auto Loop Video Background-->
+    <video autoplay loop>
+        <source src="motion_made.mp4" type="video/mp4" />
+    </video>
+
+
+
+    <div class="container">
+        <div id="game-content">
+            <div id="game-output">
+                <p class="text-center"><span class="pink-text-shadow">3</span> + <span class="blue-text-shadow"> 5</span></p>
+            </div>
+            <div id="game-input">
+                <input type="number">
+            </div>
+            <form id="game-form" >
+                <label class="btn game-button active btn-pink-shadow" for="add"><input type="radio" name="operations" value="add" checked>Add</label>
+                <label class="btn game-button btn-pink-shadow" for="subtract"><input type="radio" name="operations" value="subtract" >Subtract</label>
+                <label class="btn game-button btn-blue-shadow" for="multiply"><input type="radio" name="operations" value="multiply" >Multiply</label>
+                <label class="btn game-button btn-blue-shadow" for="divide"><input type="radio" name="operations"  value="divide">Divide</label>
+            </form>
+           
+            <div class="mt-5" id=#game-data> 
+                <h2 class="text-center">Score</h2>
+                <h2 class="text-center" id="game-score">0</h2>
+                <h2 class="text-center" >High Score</h2>
+                <h2  class="text-center"id="game-high-score">0</h2>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div id="game-timer">
+        <span class="pink-text-shadow w-25 text-center game-timer-text">10</span>
+        <span class="blue-text-shadow w-25 text-center game-timer-text">10</span>
+    </div>
+
+
+
 
     <script src="main.js"></script>
 </body>
