got the numbers adding

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div id="game-content">
             <div id="game-output">
-                <p class="text-center"><span class="pink-text-shadow">3</span> + <span class="blue-text-shadow"> 5</span></p>
+                <span id="place-one" class="pink-text-shadow">3</span><span id="operation" class="text-center"> + </span><span id="place-two" class="blue-text-shadow"> 5</span>
             </div>
             <div id="game-input">
                 <input type="number">
