--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input type="number">
             </div>
 
-            <div id="#game-settings">
+            <div id="game-settings">
                 <form id="game-form" >
                     <label class="btn game-button active btn-pink-shadow" for="add"><input type="radio" name="operations" value="add" checked>Add</label>
                     <label class="btn game-button btn-pink-shadow" for="subtract"><input type="radio" name="operations" value="subtract" >Subtract</label>
@@ -58,7 +58,7 @@
     </div>
 
 
-    <div id="game-timer">
+    <div class="blur-away" id="game-timer">
         <span class="pink-text-shadow w-25 text-center game-timer-text">10</span>
         <span class="blue-text-shadow w-25 text-center game-timer-text">10</span>
     </div>
